--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -89,41 +89,41 @@
         <hr>
         Speacial Chech up
     </div>
-    <form class="box7 form">
-        <h2>make an appoinment</h2>
-        <h5>fill form & send me</h5>
-        <select name="region" value="Select country">
-            <option value="Kyiv">Kyiv</option>
-            <option value="Cherkasy">Cherkasy</option>
-            <option value="Zhytomyr">Zhytomyr</option>
-            <option value="Rivne">Rivne</option>
-            <option value="Volynska">Volynska</option>
-            <option value="Lviv">Lviv</option>
-            <option value="Zaporizhia">Zaporizhia</option>
-        </select>
-        <select name="service" value="Select service">
-            <option value="Dentist">Dentist</option>
-            <option value="Otolaryngologist">Otolaryngologist</option>
-            <option value="Therapist">Therapist</option>
-            <option value="The addict">The addict</option>
-            <option value="Psychologist">Psychologist</option>
-            <option value="Neurologist">Neurologist</option>
-            <option value="Cardiologist">Cardiologist</option>
-        </select>
-        <select name="doctor" value="Select doctor">
-            <option value="Orlov">Orlov</option>
-            <option value="Petrov">Petrov</option>
-            <option value="Ivanov">Ivanov</option>
-            <option value="Chuyko">Chuyko</option>
-            <option value="Shurik">Shurik</option>
-            <option value="Hayduk">Hayduk</option>
-            <option value="Mozhyn">Mozhyn</option>
-        </select>
-        <input value="Choose date" pattern="Select time" type="date">
-        <input type="time" value="Select time">
-        <p>All Fields With an Are Requiremed ***</p>
-        <button>submit toy requirements</button>
-    </form>
+{#    <form class="box7 form">#}
+{#        <h2>make an appoinment</h2>#}
+{#        <h5>fill form & send me</h5>#}
+{#        <select name="region" value="Select country">#}
+{#            <option value="Kyiv">Kyiv</option>#}
+{#            <option value="Cherkasy">Cherkasy</option>#}
+{#            <option value="Zhytomyr">Zhytomyr</option>#}
+{#            <option value="Rivne">Rivne</option>#}
+{#            <option value="Volynska">Volynska</option>#}
+{#            <option value="Lviv">Lviv</option>#}
+{#            <option value="Zaporizhia">Zaporizhia</option>#}
+{#        </select>#}
+{#        <select name="service" value="Select service">#}
+{#            <option value="Dentist">Dentist</option>#}
+{#            <option value="Otolaryngologist">Otolaryngologist</option>#}
+{#            <option value="Therapist">Therapist</option>#}
+{#            <option value="The addict">The addict</option>#}
+{#            <option value="Psychologist">Psychologist</option>#}
+{#            <option value="Neurologist">Neurologist</option>#}
+{#            <option value="Cardiologist">Cardiologist</option>#}
+{#        </select>#}
+{#        <select name="doctor" value="Select doctor">#}
+{#            <option value="Orlov">Orlov</option>#}
+{#            <option value="Petrov">Petrov</option>#}
+{#            <option value="Ivanov">Ivanov</option>#}
+{#            <option value="Chuyko">Chuyko</option>#}
+{#            <option value="Shurik">Shurik</option>#}
+{#            <option value="Hayduk">Hayduk</option>#}
+{#            <option value="Mozhyn">Mozhyn</option>#}
+{#        </select>#}
+{#        <input value="Choose date" pattern="Select time" type="date">#}
+{#        <input type="time" value="Select time">#}
+{#        <p>All Fields With an Are Requiremed ***</p>#}
+{#        <button>submit toy requirements</button>#}
+{#    </form>#}
 </section>
 <section class="section_image">
     <div>
