--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Medicel</title>
+    <link rel="stylesheet" href={{ url_for('static', filename='css/account.css') }}>
     <link rel="stylesheet" href={{ url_for('static', filename='css/cabynet.css') }}>
     <link rel="stylesheet" href={{ url_for('static', filename='css/index.css') }}>
     <link rel="stylesheet" href={{ url_for('static', filename='css/header.css') }}>
@@ -41,14 +42,25 @@
     <a class="nav_all nav_5" href="pages.html">PAGES</a>
     <a class="nav_6" href="make_appoinment.html">MAKE APPOINTMENT</a>
 </nav>
+<div class="div_account">
+    <ul class="account_patient">
+        <li><a href={{ url_for("account") }}>Account</a></li>
+        <li><a href={{ url_for("doctors") }}>My Doctors</a></li>
+        <li><a href={{ url_for("visiting") }}>Visiting</a></li>
+        <li><a href={{ url_for("carta") }}>Carta Patient</a></li>
+    </ul>
+    <div class="sub_div_account">
+            <label>First name</label>
+            <p>{{ current_user.first_name }}</p>
+            <label>Last name</label>
+            <p>{{ current_user.last_name }}</p>
+            <label>Email</label>
+            <p>{{ current_user.login }}</p>
+    </div>
+    <div></div>
+</div>
 
-<ul class="account_patient">
-    <li><a href={{ url_for("account") }}>Account</a></li>
-    <li><a href={{ url_for("doctors") }}>My Doctors</a></li>
-    <li><a href={{ url_for("visiting") }}>Visiting</a></li>
-    <li><a href={{ url_for("carta") }}>Carta Patient</a></li>
-</ul>
-<footer class="footer footer_cabynet">
+<footer class="footer footer_account">
     <div class="footer_1">
         <h3><span class="spec_word">M</span>EDICAL<span class="spec_word">+</span></h3>
         <p>This is Photoshop's vesion of Lorem um. sProin gravida nibh vel ivelit aur aliquet. Aenean sollici his a
