--- a/app/templates/carta.html
+++ b/app/templates/carta.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Medicel</title>
+    <link rel="stylesheet" href={{ url_for('static', filename='css/carta.css') }}>
     <link rel="stylesheet" href={{ url_for('static', filename='css/cabynet.css') }}>
     <link rel="stylesheet" href={{ url_for('static', filename='css/index.css') }}>
     <link rel="stylesheet" href={{ url_for('static', filename='css/header.css') }}>
@@ -41,14 +42,41 @@
     <a class="nav_all nav_5" href="pages.html">PAGES</a>
     <a class="nav_6" href="make_appoinment.html">MAKE APPOINTMENT</a>
 </nav>
+<div class="div_carta">
+    <ul class="account_patient">
+        <li><a href={{ url_for("account") }}>Account</a></li>
+        <li><a href={{ url_for("doctors") }}>My Doctors</a></li>
+        <li><a href={{ url_for("visiting") }}>Visiting</a></li>
+        <li><a href={{ url_for("carta") }}>Carta Patient</a></li>
+    </ul>
+{#    <div class="sub_div_carta">#}
+        <table>
+            <tr>
+                <th>Diseases</th>
+                <th>Medicine</th>
+                <th>First name doctor</th>
+                <th>Last name doctor</th>
+                <th></th>
+            </tr>
+            {% for c in carta %}
+                <tr>
+                    <td>{{ c.name_diseases }}</td>
+                    <td>{% if c.name_medicine == None %}
 
-<ul class="account_patient">
-    <li><a href={{ url_for("account") }}>Account</a></li>
-    <li><a href={{ url_for("doctors") }}>My Doctors</a></li>
-    <li><a href={{ url_for("visiting") }}>Visiting</a></li>
-    <li><a href={{ url_for("carta") }}>Carta Patient</a></li>
-</ul>
-<footer class="footer footer_cabynet">
+                    {% else %}
+                        {{ c.name_medicine }}
+                    {% endif %}
+                    </td>
+                    <td>{{ c.first_name }}</td>
+                    <td>{{ c.last_name }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+{#    </div>#}
+    <div></div>
+</div>
+
+<footer class="footer footer_carta">
     <div class="footer_1">
         <h3><span class="spec_word">M</span>EDICAL<span class="spec_word">+</span></h3>
         <p>This is Photoshop's vesion of Lorem um. sProin gravida nibh vel ivelit aur aliquet. Aenean sollici his a
